--- a/adding_problem.ipynb
+++ b/adding_problem.ipynb
@@ -37,7 +37,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f0c14137970>"
+       "<torch._C.Generator at 0x7f66f99a8510>"
       ]
      },
      "execution_count": 1,
@@ -50,11 +50,11 @@
     "import torch.nn.functional as F\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
-    "BATCH_SIZE = 32\n",
+    "BATCH_SIZE = 128\n",
     "DEVICE = \"cuda:0\"\n",
     "DROPOUT = 0.0\n",
     "CLIP = -1.0\n",
-    "EPOCHS = 5\n",
+    "EPOCHS = 10\n",
     "KSIZE = 7\n",
     "LEVELS = 8\n",
     "SEQ_LEN = 400\n",
@@ -136,6 +136,7 @@
      "output_type": "stream",
      "text": [
       "Building model...\n",
+      "Model Size: 96.001 K\n",
       "Finished.\n"
      ]
     }
@@ -157,9 +158,12 @@
     "# define model\n",
     "print(\"Building model...\")\n",
     "model = TCN(INPUT_CHANNELS, N_CLASSES, CHANNEL_SIZES, kernel_size=KSIZE, dropout=DROPOUT)\n",
-    "\n",
     "model = model.to(DEVICE)\n",
     "optimizer = getattr(th.optim, OPTIM)(model.parameters(), lr=LR)\n",
+    "\n",
+    "model_size = sum(p.numel() for p in model.parameters())\n",
+    "\n",
+    "print(f\"Model Size: {model_size/1000} K\")\n",
     "print(\"Finished.\")"
    ]
   },
@@ -180,12 +184,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b1422e8e38ed4654b46c60bb6b6c5f5b",
+       "model_id": "9a200c10964e4d17bd4d2d902152c13e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/1563 [00:00<?, ?it/s]"
+       "  0%|          | 0/391 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -195,18 +199,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test set: Average loss: 0.176798\n"
+      "Test set: Average loss: 0.177002\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9629e3a9830c4f9388907e060fa54d83",
+       "model_id": "43e7505d167040ed8d5f9238c30d75ef",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/1563 [00:00<?, ?it/s]"
+       "  0%|          | 0/391 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -216,18 +220,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test set: Average loss: 0.039093\n"
+      "Test set: Average loss: 0.175263\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "56267561dab848d4abe6e3f116e4212b",
+       "model_id": "29df71fb20a8414696d5e7150c0ac82a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/1563 [00:00<?, ?it/s]"
+       "  0%|          | 0/391 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -237,18 +241,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test set: Average loss: 0.000391\n"
+      "Test set: Average loss: 0.173659\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "646dc8585d8a41a4be1fd1434b018592",
+       "model_id": "5a737bac3f7d4a989547eda9796b05da",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/1563 [00:00<?, ?it/s]"
+       "  0%|          | 0/391 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -258,18 +262,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test set: Average loss: 0.000486\n"
+      "Test set: Average loss: 0.002255\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6af10f95aa7340129f05743d0b2041b6",
+       "model_id": "ad6081d81dbe40fca10a479f3883fc73",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/1563 [00:00<?, ?it/s]"
+       "  0%|          | 0/391 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -279,7 +283,112 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test set: Average loss: 0.000393\n"
+      "Test set: Average loss: 0.000805\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "018564fe03c84ee2ad80451383cb509f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/391 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test set: Average loss: 0.000562\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5c800ab4413f469da6a516d4614b798b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/391 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test set: Average loss: 0.000519\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "59639171a2164f088eed2d404eca5c3b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/391 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test set: Average loss: 0.000785\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "aa7c6d1f0c90481b9a30442f3c498366",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/391 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test set: Average loss: 0.000349\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1580e14f8b5e4f8d9d862f48215955c4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/391 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test set: Average loss: 0.002587\n"
      ]
     }
    ],
@@ -344,7 +453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
