--- a/mnist_pixel.ipynb
+++ b/mnist_pixel.ipynb
@@ -36,7 +36,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f35180a2950>"
+       "<torch._C.Generator at 0x7f5708b534f0>"
       ]
      },
      "execution_count": 1,
@@ -52,17 +52,16 @@
     "\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
-    "BATCH_SIZE = 64\n",
+    "BATCH_SIZE = 128\n",
     "DEVICE = \"cuda:0\"\n",
     "DROPOUT = 0.05\n",
     "CLIP = -1\n",
     "EPOCHS = 5\n",
     "KSIZE = 7\n",
     "LEVELS = 8\n",
-    "LOG_INTERVAL = 100\n",
     "LR = 2e-3\n",
     "OPTIM = \"Adam\"\n",
-    "NHID = 25\n",
+    "NHID = 30\n",
     "SEED = 1111\n",
     "PERMUTE = False\n",
     "\n",
@@ -134,6 +133,7 @@
      "output_type": "stream",
      "text": [
       "Building model...\n",
+      "Model Size: 96.04 K\n",
       "Finished.\n"
      ]
     }
@@ -161,6 +161,11 @@
     "model = model.to(DEVICE)\n",
     "\n",
     "optimizer = getattr(th.optim, OPTIM)(model.parameters(), lr=LR)\n",
+    "\n",
+    "model_size = sum(p.numel() for p in model.parameters())\n",
+    "\n",
+    "print(f\"Model Size: {model_size/1000} K\")\n",
+    "\n",
     "print(\"Finished.\")"
    ]
   },
@@ -179,12 +184,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c0182f4b9bde4b348d233822363baa01",
+       "model_id": "4227a1efec4241139ae5c73a03166f64",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/938 [00:00<?, ?it/s]"
+       "  0%|          | 0/469 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -194,18 +199,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 93.97%\n"
+      "Accuracy: 95.59%\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "47c4afd4d741454380a5f7490eedf6ed",
+       "model_id": "b099521d57474cfb8f276b267dd079f6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/938 [00:00<?, ?it/s]"
+       "  0%|          | 0/469 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -215,18 +220,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 95.63%\n"
+      "Accuracy: 97.02%\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "19bc1839aebe432288ec9d37f594deb9",
+       "model_id": "e97a25105f91426ebb4a31266f2eafcc",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/938 [00:00<?, ?it/s]"
+       "  0%|          | 0/469 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -236,18 +241,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 97.20%\n"
+      "Accuracy: 97.72%\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3b92bc7734f14844af8b36f19240f199",
+       "model_id": "205f3a449c7548b9812439c10c831f51",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/938 [00:00<?, ?it/s]"
+       "  0%|          | 0/469 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -257,18 +262,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 97.88%\n"
+      "Accuracy: 97.61%\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e7ca28b437c4bd09f1a0b9d5469a2f8",
+       "model_id": "b5148b88ca5d437db4e17f7621d8e666",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/938 [00:00<?, ?it/s]"
+       "  0%|          | 0/469 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -278,7 +283,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 97.90%\n"
+      "Accuracy: 98.07%\n"
      ]
     }
    ],
@@ -344,7 +349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
